# orders

./: Cargo.toml  build.rs  mongodb.txt
proto/: orders.proto
src/: main.rs  model.rs
src/handlers/: handlers_inner.rs  mod.rs
src/order-client/: main.rs
src/order-service/: main.rs
src/order-service/handlers/: handlers_inner.rs  mod.rs
src/order-service/persistence/: orders_dao.rs
