[package]
name = "rust-orders"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "order-service"
path = "src/order-service/main.rs"

[[bin]]
name = "order-client"
path = "src/order-client/main.rs"

[dependencies]
axum = "0.7.5"
cargo-watch = "8.5.2"
serde = "1.0.209"
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
async-trait = "0.1.81"
mongodb = "3.0.1"
uuid = "1.10.0"
bson = "2.11.0"
thiserror = "1.0.63"
dotenvy = "0.15.7"
log = "0.4.22"
pretty_env_logger = "0.5.0"
iso_currency = { version = "0.5.0", features = ["with-serde"] }
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
async-nats = { version = "0.35.1", features = ["service"] } 
futures = "0.3.30"
bytes = "1.7.1"
prost = { version = "0.13.1", features = ["derive"] }
clap = { version = "4.5.16", features = ["derive"] }

[build-dependencies]
prost-build = "0.13.1"
